fix(General Styles): iOS support for DatePicker
DatePicker from carbon-components-react needs some tweaks to not look like garbage on iOS.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -111,3 +111,11 @@ body {
     min-width: 31.25rem;
   }
 }
+
+// Some overrides to support datepicker in iOS
+@supports (-webkit-overflow-scrolling: touch) {
+  .bx--date-picker__input.flatpickr-input.flatpickr-mobile {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
